--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 requests==2.31.0
 beautifulsoup4==4.12.2
-playwright==1.42.0 
+playwright==1.42.0
+fastapi==0.110.0
+uvicorn==0.27.1
+python-multipart==0.0.9 
